[project]
name = "hello-honey"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "dotenv>=0.9.9",
    "honey",
    "openai>=2.9.0",
]

[tool.setuptools]
py-modules = ["hello", "main"]

[tool.uv.sources]
honey = { path = "../honey", editable = true }
